--- a/moodtracker/mood/static/css/base.css
+++ b/moodtracker/mood/static/css/base.css
@@ -58,7 +58,7 @@ body
     justify-content: space-between;
 
     width: 100%;
-    height: 60px;
+    height: 80px;
     padding: 0;
     margin: 0;
 
@@ -114,6 +114,21 @@ body
 #content_header_profile_block a
 {
     color: var(--header-link-color);
+    margin: 2px;
+    padding: 1px 4px 1px 4px;
+    text-align: center;
+    background: linear-gradient(0deg, rgba(255,255,255,.1),rgba(255,255,255,.25));
+    text-decoration: none;
+    border: 1px solid rgba(0,0,0,.3);
+    box-shadow: 1px 1px 1px rgba(0,0,0,.2);
+}
+
+#content_header_profile_links
+{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
 }
 
 /* 
