--- a/moodtracker/mood/static/css/settings.css
+++ b/moodtracker/mood/static/css/settings.css
@@ -6,8 +6,6 @@
     justify-content: space-between;
 
     width: 100%;
-
-    
 }
 
 #profile_item_container
@@ -50,4 +48,21 @@
     width: 300px;
 
     font-family: var(--font-sans);
+}
+
+.profile_item_save_button,
+.profile_item_edit_button,
+.profile_item_cancel_button
+{
+    width: 70px;
+
+    margin: 0px 5px 0px 5px;
+    padding: 3px;
+
+    border: 1px solid rgba(0,0,0,.6);
+
+    font-family: var(--font-serif);
+
+    text-align: center;
+    cursor: pointer;
 }
