--- a/moodtracker/mood/templates/base.html
+++ b/moodtracker/mood/templates/base.html
@@ -35,7 +35,7 @@
                     <span>Hi, {{ request.user.username }}!</span>
                     <div id="content_header_profile_links">
                         <a href="{% url 'profile' username=request.user.username %}">Profile</a>
-                        <a href="{% url 'profile' username=request.user.username %}">Settings</a>
+                        <a href="{% url 'settings' username=request.user.username %}">Settings</a>
                         <a href="{% url 'logout' %}">Log Out</a>
                     </div>
 
