--- a/moodtracker/mood/templates/user/settings.html
+++ b/moodtracker/mood/templates/user/settings.html
@@ -9,15 +9,20 @@ $(document).ready(function(){
     
     $.getJSON('/moodtracker/get_user_profile/', {'user_id': user_id}, function(data){
         for (var item in data){
-            var profile_item_name = item;
-            var profile_item_value = data[item];
-            createSettingsItem(profile_item_name, profile_item_value)
+            var name = item;
+            var value = data[item];
+            var display_name = _.startCase(name.replace('_', ' '));
+            createSettingsItem(name, value, display_name)
         }
     });
 });
 
 
-function createSettingsItem(name, value){
+function createSettingsItem(name, value, display_name){
+    // If no display name is given, use name
+    if (typeof display_name === 'undefined'){
+        display_name = name;
+    }
 
     // Create item container
     var $profile_item = $("<div>", {
@@ -29,7 +34,7 @@ function createSettingsItem(name, value){
     var $profile_item_name = $("<div>", {
         id: 'profile_item_name_'+name, 
         'class': 'profile_item_name'
-    }).text(name);
+    }).text(display_name);
 
     var $profile_item_value = $("<div>", {
         id: 'profile_item_value_'+name, 
@@ -100,10 +105,7 @@ function createSettingsItem(name, value){
         $($profile_item_edit_button).show();
         $(this).hide();
         $($profile_item_save_button).hide();
-
-        var txt = $profile_item_value_input.val();
         $($profile_item_value_input).replaceWith($profile_item_value);
-        $($profile_item_value).text(text);
     });
 
     // Add everything to the DOM
@@ -125,7 +127,8 @@ function updateUserProfile(data){
 {% endblock head %}
 
 {% block content %}
-<div id="profile">
+<div id="settings">
+    <h1>Settings</h1>
     <div id="profile_item_container">
     </div>
 </div>
