--- a/moodtracker/mood/templates/user/mood.html
+++ b/moodtracker/mood/templates/user/mood.html
@@ -1,7 +1,20 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+{% load static %}
+
+<link rel="stylesheet"               href="{% static 'css/mood.css' %}">
+
+<script type="text/javascript">
+var user_id = "{{ user_id|safe }}";
+</script>
+
+
+
+{% endblock head %}
+
 {% block content %}
-
-Hello!
-
+<div id="reactContainer"></div>
+<script type="text/javascript"            src="{% static 'js/mood.js' %}"></script>
 {% endblock content %}
