--- a/moodtracker/mood/static/css/mood.css
+++ b/moodtracker/mood/static/css/mood.css
@@ -2,3 +2,12 @@
 {
     width: 70%;
 }
+
+.nv-chart
+{
+    width: 100%;
+    height: 350px;
+
+    background: linear-gradient(0deg, rgba(0,0,0,0), rgba(0,0,0,.03));
+    box-shadow: 1px 1px 3px rgba(0,0,0,.2);
+}
