--- a/moodtracker/mood/templates/base.html
+++ b/moodtracker/mood/templates/base.html
@@ -10,6 +10,7 @@
 
         {% load static %}
         <script type="text/javascript"       src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+        <script type="text/javascript"       src="{% static 'js/jquery.inputmask.bundle.js' %}"></script>
         <script type="text/javascript"       src="{% static 'js/lodash.min.js' %}"></script>
         <script type="text/javascript"       src="{% static 'js/svg-injector.min.js' %}"></script>
      
